--- a/src/main/webapp/pages/equipe/equipe-editar.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-editar.xhtml
@@ -12,7 +12,7 @@
 	    		<p:inputText value="#{equipeManager.equipe.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}"/>
 	    		<br /><br />
 	    		<p:outputLabel for="button" value="#{message['label.data.inicio.nova']}" styleClass="label"/>
-	    		<p:calendar id="button" value="#{equipeManager.equipe.dataManipulacao}" pattern="dd/MM/yyyy" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}"/>
+	    		<p:calendar id="button" value="#{equipeManager.equipe.dataManipulacao}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}"/>
 	    		<br /><br />
 	    	<p:commandButton value="#{message['button.salvar']}" action="#{equipeManager.update()}" update="growl" />
 	    	<p:button value="#{message['button.cancelar']}"  outcome="pretty:equipe"></p:button>
