--- a/src/main/webapp/pages/equipe/equipe-incluir.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-incluir.xhtml
@@ -11,7 +11,7 @@
 	    		<p:outputLabel value="#{message['label.nome']} *" styleClass="label"/>
 	    		<p:inputText value="#{equipeManager.equipe.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}"/><br /><br />
 	    		<p:outputLabel for="button" value="#{message['label.data.inicio']}" styleClass="label" />
-	    		<p:calendar id="button" value="#{equipeManager.equipe.registroValidadeInicio}" pattern="dd/MM/yyyy" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}"/><br /><br/>
+	    		<p:calendar id="button" value="#{equipeManager.equipe.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}"/><br /><br/>
 	    	
 	    		<p:commandButton value="#{message['button.salvar']}" action="#{equipeManager.save()}" update="growl" />
 	    		<p:button value="#{message['button.cancelar']}"  outcome="pretty:equipe"></p:button>
