--- a/src/main/webapp/pages/home/index.xhtml
+++ b/src/main/webapp/pages/home/index.xhtml
@@ -3,6 +3,9 @@
     template="/pages/template/default.xhtml">
 
     <ui:define name="content">
+    	<p:breadCrumb>
+		    <p:menuitem value="Home" url="#" />
+		</p:breadCrumb>
         Selecione o módulo!
     </ui:define>
 
