--- a/src/main/webapp/pages/status/status-listar.xhtml
+++ b/src/main/webapp/pages/status/status-listar.xhtml
@@ -8,8 +8,8 @@
 
 	<ui:define name="content">
 	<p:breadCrumb>
-		    <p:menuitem value="Home" url="#" />
-		    <p:menuitem value="Status" outcome="pretty:status" disabled="true"/>
+		    <p:menuitem value="#{message['pao.home']}" url="#" />
+		    <p:menuitem value="#{message['pao.status']}" outcome="pretty:status" disabled="true"/>
 		</p:breadCrumb>
 		<div class="panel-formulario">
 			<h2>#{message['title.status']}</h2>
@@ -25,15 +25,15 @@
 							<p:commandButton id="editar" styleClass="btn-acao" type="button" icon="ui-icon-pencil" />
 						</pretty:link>
 						<p:commandButton id="desativar" styleClass="btn-acao" icon="ui-icon-closethick"  action="#{statusManager.desativar(status.id)}" update="gridStatus">
-							<p:confirm header="Desativar Status" message="#{message['questiona.desativar']}" icon="ui-icon-alert" />	
+							<p:confirm header="#{message['button.desativar']}" message="#{message['questiona.desativar']}" icon="ui-icon-alert" />	
 						</p:commandButton>
-						<p:tooltip id="alt-editar" for="editar" value="Editar" styleClass="alt"/>
-						<p:tooltip id="alt-desativar" for="desativar" value="Desativar" styleClass="alt"/>
+						<p:tooltip id="alt-editar" for="editar" value="#{message['button.editar']}" styleClass="alt"/>
+						<p:tooltip id="alt-desativar" for="desativar" value="#{message['button.desativar']}" styleClass="alt"/>
 					</p:column>
 				</p:dataTable>
 				<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
-					<p:commandButton value="Sim" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
-					<p:commandButton value="Não" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+					<p:commandButton value="#{message['button.sim']}" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+					<p:commandButton value="#{message['button.nao']}" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
 				</p:confirmDialog>
 				<br />
 				<p:button styleClass="btn-default" value="#{message['button.novo']}" outcome="pretty:status-incluir" />
