--- a/src/main/webapp/pages/profissional/profissional-listar.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-listar.xhtml
@@ -18,13 +18,12 @@
 		<h:form>
 			
 			<div class="pesquisa">
-				<!-- <p:outputLabel for="nome" value="#{message['label.nome']}" styleClass="label" /> -->
+				<p:outputLabel for="nome" value="#{message['label.nome']}" styleClass="label" />
 				<p:inputText id="nome" value="#{profissionalManager.nome}" pt:placeholder="Pesquisar por Nome..."/>
 				<p:commandButton id="pesquisar" icon="ui-icon-search" action="#{profissionalManager.buscarPorNome()}" immediate="false"/>
 				<p:commandButton id="limpar" icon="ui-icon-arrowreturnthick-1-w" action="#{profissionalManager.populaLista()}" update="gridProfissional"/>
 				<p:tooltip id="alt-pesquisar" for="pesquisar" value="Pesquisar" styleClass="alt"/>
 				<p:tooltip id="alt-limpar" for="limpar" value="Limpar" styleClass="alt"/>
-				<br/><br/>
 			</div>
 
 			
