--- a/src/main/webapp/pages/perfilStefanini/perfilStefanini-editar.xhtml
+++ b/src/main/webapp/pages/perfilStefanini/perfilStefanini-editar.xhtml
@@ -23,7 +23,7 @@
 				<p:outputLabel for="valorFinal" value="#{message['label.perfilStefanini.valorFinal']}" styleClass="label"/>
         		<p:inputText id="valorFinal" value="#{perfilStefaniniManager.perfilStefanini.valorFinal}" onblur="retornaPadrao(this)" converter="valorFinalConverter" onfocus="limpaDoubleVazio(this)" onkeypress="mascara(this,moeda)" maxlength="14"/><br/><br/>
         		
-        		<p:outputLabel for="calendario" value="#{message['label.data.inicio']}" styleClass="label"/>
+        		<p:outputLabel for="calendario" value="#{message['label.data.inicio.nova']}" styleClass="label"/>
         		<p:calendar id="calendario" value="#{perfilStefaniniManager.perfilStefanini.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/><br/><br/>
         		
         		<p:outputLabel for="calendarioFim" value="#{message['label.data.final']}" styleClass="label"/>
