--- a/src/main/webapp/pages/status/status-editar.xhtml
+++ b/src/main/webapp/pages/status/status-editar.xhtml
@@ -17,7 +17,7 @@
 				<p:outputLabel for="nome" value="#{message['label.nome']}" styleClass="label" />
 				<p:inputText id="nome" value="#{statusManager.status.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" />
 				<br /><br />
-				<p:outputLabel for="button" value="#{message['label.data.inicio']}" styleClass="label" />
+				<p:outputLabel for="button" value="#{message['label.data.inicio.nova']}" styleClass="label" />
 				<p:calendar id="button" value="#{statusManager.status.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>
 				<br /><br />
 				<p:outputLabel for="buttonFim" value="#{message['label.data.final']}" styleClass="label" />
