--- a/src/main/webapp/pages/profissional/profissional-editar.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-editar.xhtml
@@ -21,7 +21,7 @@
 				</p:selectOneMenu>
 				<br /><br />
 				<p:outputLabel for="matricula" value="#{message['label.profissional.matricula']}" styleClass="label" />
-				<p:inputText id="matricula" value="#{profissionalManager.profissional.matricula}" required="true" requiredMessage="#{message['span.obrigatorio.Matricula']}" />
+				<p:inputMask mask="999999" id="matricula" value="#{profissionalManager.profissional.matricula}" required="true" requiredMessage="#{message['span.obrigatorio.Matricula']}" disabled="true" />
 				<br /><br />				
 				<p:outputLabel for="nome" value="#{message['label.nome']}" styleClass="label" />
 				<p:inputText id="nome" value="#{profissionalManager.profissional.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" />
