--- a/src/main/webapp/pages/equipe/equipe-incluir.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-incluir.xhtml
@@ -20,6 +20,9 @@
 	    		<p:outputLabel for="button" value="#{message['label.data.inicio']}" styleClass="label" />
 	    		<p:calendar id="button" value="#{equipeManager.equipe.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>
 	    		<br /><br/>
+	    		<p:outputLabel for="buttonFim" value="#{message['label.data.final']}" styleClass="label" />
+	    		<p:calendar id="buttonFim" value="#{equipeManager.equipe.registroValidadeFim}" pattern="dd/MM/yyyy" mask="true" showOn="button" disabledWeekends="true"/>
+	    		<br /><br/>
 	    		<p:commandButton value="#{message['button.salvar']}" action="#{equipeManager.save()}" update="growl" styleClass="btn"/>
 	    		<p:button value="#{message['button.cancelar']}"  outcome="pretty:equipe" styleClass="btn"/>
 	    	</p:panel>
